--- a/YHUzone/YHUzone/Classes/Music/Controller/YHPlayingViewController.xib
+++ b/YHUzone/YHUzone/Classes/Music/Controller/YHPlayingViewController.xib
@@ -10,11 +10,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YHPlayingViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YHUPlayingViewController">
             <connections>
-                <outlet property="albumView" destination="aQQ-JO-DyR" id="Y3f-St-VAI"/>
-                <outlet property="progressSlider" destination="znb-LM-q8r" id="32t-GJ-A1J"/>
-                <outlet property="view" destination="iN0-l3-epB" id="AOj-Pe-VwR"/>
+                <outlet property="albumView" destination="aQQ-JO-DyR" id="Qdr-AK-Wk1"/>
+                <outlet property="currentTimeLabel" destination="Lhk-JU-XBg" id="4Oc-MR-eL8"/>
+                <outlet property="iconView" destination="gEm-A4-Itk" id="XcQ-my-Gzv"/>
+                <outlet property="lrcLabel" destination="0Xy-Fw-1CM" id="iAm-F3-AoC"/>
+                <outlet property="lrcView" destination="4h2-8R-yfq" id="NDT-Zf-UZz"/>
+                <outlet property="playOrPauseBtn" destination="dL3-Mt-g8Q" id="bG1-XM-kfV"/>
+                <outlet property="progressSlider" destination="znb-LM-q8r" id="5eI-Tl-hGg"/>
+                <outlet property="singerLabel" destination="cbt-0P-Txk" id="Lln-Dc-vVZ"/>
+                <outlet property="songLabel" destination="LOb-sl-yqe" id="vjZ-kO-x4q"/>
+                <outlet property="totalTimeLabel" destination="P9v-aW-C7b" id="4zF-a3-k2X"/>
+                <outlet property="view" destination="iN0-l3-epB" id="aSv-cR-1Tz"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -81,6 +89,9 @@
                             <rect key="frame" x="61" y="56" width="64" height="64"/>
                             <state key="normal" title="Button" image="player_btn_pre_normal"/>
                             <state key="selected" image="player_btn_pause_normal"/>
+                            <connections>
+                                <action selector="previous" destination="-1" eventType="touchUpInside" id="wTl-jl-7WS"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dL3-Mt-g8Q" userLabel="中Button">
                             <rect key="frame" x="155" y="56" width="64" height="64"/>
@@ -90,22 +101,34 @@
                             </constraints>
                             <state key="normal" title="Button" image="player_btn_play_normal"/>
                             <state key="selected" image="player_btn_pause_normal"/>
+                            <connections>
+                                <action selector="playOrPause" destination="-1" eventType="touchUpInside" id="hks-UH-Uob"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jO8-wL-5VF" userLabel="右Button">
                             <rect key="frame" x="249" y="56" width="64" height="64"/>
                             <state key="normal" title="Button" image="player_btn_next_normal"/>
                             <state key="selected" image="player_btn_next_normal"/>
+                            <connections>
+                                <action selector="next" destination="-1" eventType="touchUpInside" id="vwj-AU-OQW"/>
+                            </connections>
                         </button>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="znb-LM-q8r">
                             <rect key="frame" x="48" y="6" width="279" height="31"/>
+                            <connections>
+                                <action selector="endSlide" destination="-1" eventType="touchUpInside" id="ssd-d8-oO4"/>
+                                <action selector="sliderValueChange" destination="-1" eventType="valueChanged" id="kLy-Cv-G2P"/>
+                                <action selector="startSlide" destination="-1" eventType="touchDown" id="TR5-4S-Myv"/>
+                                <outletCollection property="gestureRecognizers" destination="dTp-re-UDz" appends="YES" id="7k1-BT-tQ7"/>
+                            </connections>
                         </slider>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhk-JU-XBg">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhk-JU-XBg" userLabel="Current Time Label">
                             <rect key="frame" x="0.0" y="13.5" width="50" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="04:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9v-aW-C7b">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="04:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9v-aW-C7b" userLabel="Total Time Label">
                             <rect key="frame" x="325" y="13.5" width="50" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -141,10 +164,13 @@
                         <constraint firstAttribute="width" secondItem="gEm-A4-Itk" secondAttribute="height" multiplier="1:1" id="inx-hC-Iry"/>
                     </constraints>
                 </imageView>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4h2-8R-yfq">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4h2-8R-yfq" userLabel="Lrc View" customClass="YHULrcView">
                     <rect key="frame" x="0.0" y="100" width="375" height="417"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Q38-ZH-5fX"/>
+                    </connections>
                 </scrollView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌词" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xy-Fw-1CM">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌词" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xy-Fw-1CM" customClass="YHULrcLabel">
                     <rect key="frame" x="172.5" y="479" width="31" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="Tlm-gD-rVx"/>
@@ -177,8 +203,13 @@
                 <constraint firstItem="oU8-3G-aeR" firstAttribute="top" secondItem="0Xy-Fw-1CM" secondAttribute="bottom" constant="20" id="utS-zG-gHN"/>
                 <constraint firstAttribute="trailing" secondItem="4h2-8R-yfq" secondAttribute="trailing" id="ve6-jg-uvg"/>
             </constraints>
-            <point key="canvasLocation" x="-73.5" y="37.5"/>
+            <point key="canvasLocation" x="204" y="73"/>
         </view>
+        <tapGestureRecognizer id="dTp-re-UDz">
+            <connections>
+                <action selector="sliderClick:" destination="-1" id="kHZ-4d-ufU"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="lkq.jpg" width="350" height="350"/>
